--- a/additional_features.css
+++ b/additional_features.css
@@ -93,3 +93,18 @@
     }
     
 }
+
+
+
+
+span{
+    opacity: 0;
+    transition: all 0.5s ease;
+    transform: translateY(30px);
+    display: inline-block;
+}
+
+span.fade{
+    opacity: 1;
+    transform: translateY(0px);
+}
