--- a/additional_features.css
+++ b/additional_features.css
@@ -12,7 +12,7 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(199, 197, 197, 0.753);
+    background-color: #9fffedc5;
     z-index: 1;
     display: grid;
     justify-content: center;
