--- a/file.css
+++ b/file.css
@@ -175,8 +175,8 @@ hr{
 .projects{
     
     height: 30%;
-    margin: 20px 40px;
-    border: 3px solid rgb(250, 201, 195);
+    margin: 20px 20px;
+    border: 3px solid #000;
     /* display: flex; */
     /* margin-left: 100px;
     padding: 100px; */
@@ -211,8 +211,8 @@ hr{
   }
 
   .projects:hover{
-    margin: 10px 40px;
-    border: 3px solid springgreen;
+    margin: 10px 20px;
+    /* border: 3px solid springgreen; */
     box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.89) ,
     -5px -10px 5px rgb(255, 255, 255);
     
