--- a/file.css
+++ b/file.css
@@ -174,7 +174,8 @@ hr{
 } */
 .projects{
     
-    height: 30%;
+    height: 25%;
+    width: 25%;
     margin: 20px 20px;
     border: 3px solid #000;
     /* display: flex; */
