--- a/file.css
+++ b/file.css
@@ -175,7 +175,7 @@ hr{
 .projects{
     
     height: 25%;
-    width: 25%;
+    /* width: 25%; */
     margin: 20px 20px;
     border: 3px solid #000;
     /* display: flex; */
